--- a/trunk/sgo/web/header.jspf
+++ b/trunk/sgo/web/header.jspf
@@ -168,6 +168,21 @@
 					
 						<ul class="consultor">
 							<li><a href="<c:url value="/procedimentobanco"/>">Procedimentos Bancos</a></li>
+							<li><a href="<c:url value="/script/1"/>">Scripts Vendas</a></li>
+						</ul>
+				
+					</li>
+					
+					<li class="submenu">
+	
+						<a href="#"><i class="icon icon-check"></i> <span>PDF</span> <span class="label">1</span></a>
+					
+						<ul class="consultor">
+							<li><a href="<c:url value="/script/15"/>">Resultados</a></li>
+							<li><a href="<c:url value="/script/10"/>">Tabelas de Desconto</a></li>
+							<li><a href="<c:url value="/script/11"/>">Políticas de Banco</a></li>
+							<li><a href="<c:url value="/script/12"/>">Coeficientes</a></li>
+							<li><a href="<c:url value="/script/13"/>">Status PN</a></li>
 						</ul>
 				
 					</li>
@@ -213,6 +228,16 @@
 					<li class="submenu">
 	
 						<a href="#"><i class="icon icon-check"></i> <span>Scripts</span> <span class="label">1</span></a>
+					
+						<ul class="consultor">
+							<li><a href="<c:url value="/procedimentobanco"/>">Procedimentos Bancos</a></li>
+						</ul>
+				
+					</li>
+					
+					<li class="submenu">
+	
+						<a href="#"><i class="icon icon-check"></i> <span>PDF</span> <span class="label">1</span></a>
 					
 						<ul class="consultor">
 							<li><a href="<c:url value="/procedimentobanco"/>">Procedimentos Bancos</a></li>
