--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -234,13 +234,16 @@
 						</ul>
 				
 					</li>
-					
+
 					<li class="submenu">
 	
 						<a href="#"><i class="icon icon-check"></i> <span>PDF</span> <span class="label">1</span></a>
 					
 						<ul class="consultor">
-							<li><a href="<c:url value="/procedimentobanco"/>">Procedimentos Bancos</a></li>
+							<li><a href="<c:url value="/script/10"/>">Tabelas de Desconto</a></li>
+							<li><a href="<c:url value="/script/11"/>">Políticas de Banco</a></li>
+							<li><a href="<c:url value="/script/12"/>">Coeficientes</a></li>
+							<li><a href="<c:url value="/script/13"/>">Status PN</a></li>
 						</ul>
 				
 					</li>
