--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -121,6 +121,7 @@
 						<ul class="consultor">
 							<li><a href="<c:url value="/menu/contratos/${usuarioInfo.perfil.chave}"/>">Contratos</a></li>
 							<li><a href="<c:url value="/hisconbeneficio/hiscons/${usuarioInfo.perfil.chave}"/>">Hiscons</a></li>
+							<li><a href="<c:url value="/coeficiente/coeficientes"/>">Coeficientes</a></li>
 						</ul>
 				
 					</li>
@@ -163,6 +164,7 @@
 						<ul class="consultor">
 							<li><a href="<c:url value="/menu/contratos/${usuarioInfo.perfil.chave}"/>">Contratos</a></li>
 							<li><a href="<c:url value="/hisconbeneficio/hiscons/${usuarioInfo.perfil.chave}"/>">Hiscons</a></li>
+							<li><a href="<c:url value="/coeficiente/coeficientes"/>">Coeficientes</a></li>
 						</ul>
 				
 					</li>
@@ -214,6 +216,7 @@
 						<ul class="consultor">
 							<li><a href="<c:url value="/menu/contratos/${usuarioInfo.perfil.chave}"/>">Contratos</a></li>
 							<li><a href="<c:url value="/hisconbeneficio/hiscons/${usuarioInfo.perfil.chave}"/>">Hiscons</a></li>
+							<li><a href="<c:url value="/coeficiente/coeficientes"/>">Coeficientes</a></li>
 						</ul>
 				
 					</li>
@@ -276,6 +279,7 @@
 						<ul class="consultor">
 							<li><a href="<c:url value="/menu/contratos/${usuarioInfo.perfil.chave}"/>">Contratos</a></li>
 							<li><a href="<c:url value="/hisconbeneficio/hiscons/${usuarioInfo.perfil.chave}"/>">Hiscons</a></li>
+							<li><a href="<c:url value="/coeficiente/coeficientes"/>">Coeficientes</a></li>
 						</ul>
 				
 					</li>
