--- a/trunk/sgo/web/header.jspf
+++ b/trunk/sgo/web/header.jspf
@@ -163,6 +163,7 @@
 					
 						<ul class="consultor">
 							<li><a href="<c:url value="/menu/contratos/${usuarioInfo.perfil.chave}"/>">Contratos</a></li>
+							<li><a href="<c:url value="/menu/contratos/datascontrole"/>">Boleto / Averbação</a></li>
 							<li><a href="<c:url value="/hisconbeneficio/hiscons/${usuarioInfo.perfil.chave}"/>">Hiscons</a></li>
 							<li><a href="<c:url value="/coeficiente/coeficientes"/>">Coeficientes</a></li>
 						</ul>
