--- a/trunk/sgo/web/header.jspf
+++ b/trunk/sgo/web/header.jspf
@@ -50,7 +50,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1><a href="<c:url value="/menu/inicio"/>">OuroCred </a></h1>		
+			<h1><a href="<c:url value="/menu/inicio/${usuarioInfo.perfil.chave }"/>">OuroCred </a></h1>		
 		</div>
 
 		<div id="search">
@@ -62,15 +62,15 @@
 		<div id="user-nav" class="navbar navbar-inverse">
             <ul class="nav btn-group">
 
-                <li class="btn btn-inverse dropdown" id="menu-messages"><a href="#" data-toggle="dropdown" data-target="#menu-messages" class="dropdown-toggle"><i class="icon icon-user"></i> <span class="text">Profile</span><b class="caret"></b></a>
+                <li class="btn btn-inverse dropdown" id="menu-messages"><a href="#" data-toggle="dropdown" data-target="#menu-messages" class="dropdown-toggle"><i class="icon icon-user"></i> <span class="text">Usuário</span><b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a class="sAdd" title="" href="<c:url value="/usuario/senha"/>">Troca Senha</a></li>
                     </ul>
                 </li>
 
-                <li class="btn btn-inverse"><a title="" href="#"><i class="icon icon-cog"></i> <span class="text">Settings</span></a></li>
+                <li class="btn btn-inverse"><a title="" href="#"><i class="icon icon-cog"></i> <span class="text">Configurações</span></a></li>
 
-                <li class="btn btn-inverse"><a title="" href="<c:url value="/home/logout"/>"><i class="icon icon-share-alt"></i> <span class="text">Logout</span></a></li>
+                <li class="btn btn-inverse"><a title="" href="<c:url value="/home/logout"/>"><i class="icon icon-share-alt"></i> <span class="text">Sair</span></a></li>
             </ul>
         </div>
             
