--- a/trunk/sgo/web/header.jspf
+++ b/trunk/sgo/web/header.jspf
@@ -55,7 +55,8 @@
 
 		<div id="search">
 			<form id="buscaParceiroForm" action="<c:url value="/parceironegocio/cadastro" />" method="post">
-				<input id="doc" name="doc" type="text" placeholder="Busca CPF..." required /><button type="submit"><i class="icon-search icon-white"></i></button>
+				<input id="doc" name="doc" type="text" placeholder="Busca cpf" /><button type="submit"><i class="icon-search icon-white"></i></button>
+				<label for="doc">Busque através do CPF do parceiro .</label>
 			</form>
 		</div>
 
