--- a/sgo/web/header.jspf
+++ b/sgo/web/header.jspf
@@ -5,17 +5,24 @@
 <%@taglib uri="http://java.sun.com/jsp/jstl/functions" prefix="fn" %>
 <%@taglib uri="/WEB-INF/lib/formattag.jar" prefix="f" %>
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
 	<head>
 
+	
+		<meta http-equiv="X-UA-Compatible" content="IE=9" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 		<title>SGO - SISTEMA GRUPO OURO CRED 2013</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!--[if lt IE 9]>
+        	<script type="text/javascript" src="<c:url value="/js/html5shiv.js"/>"></script>
+        <![endif]-->
 	
 		<link rel="stylesheet" href="<c:url value="/css/jquery-ui.css"/>" />
 		<link rel="stylesheet" href="<c:url value="/css/jquery.ui.ie.css"/>" />
@@ -33,7 +40,8 @@
 
 		<script type="text/javascript" src="<c:url value="/js/jquery.js"/>"></script>
 		<script type="text/javascript" src="<c:url value="/js/jquery-ui.custom.js"/>"></script>
-		<script type="text/javascript" src="<c:url value="/js/bootstrap.js"/>"></script>		
+		<script type="text/javascript" src="<c:url value="/js/bootstrap.js"/>"></script>	
+				
         <script type="text/javascript" src="<c:url value="/js/jquery.peity.js"/>"></script>
         <script type="text/javascript" src="<c:url value="/js/jquery.uniform.js"/>"></script>    
         <script type="text/javascript" src="<c:url value="/js/jquery.validate.min.js"/>"></script>    
@@ -46,6 +54,10 @@
 		<script type="text/javascript" src="<c:url value="/js/unicorn.js"/>"></script>
 		<script type="text/javascript" src="<c:url value="/js/funcs.js"/>"></script>
 		<script type="text/javascript" src="<c:url value="/js/ColVis.js"/>"></script>
+		
+		<!--[if lt IE 9]>  
+			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>  
+		<![endif]--> 
 
 	</head>
 	<body>
