--- a/trunk/sgo/web/header.jspf
+++ b/trunk/sgo/web/header.jspf
@@ -208,7 +208,7 @@
 					
 					<li class="submenu">
 	
-						<a href="#"><i class="icon icon-check"></i> <span>PDF</span></a>
+						<a href="#"><i class="icon icon-check"></i> <span>Tabelas</span></a>
 					
 						<ul class="consultor">
 							<li><a href="<c:url value="/script/15"/>">Resultados</a></li>
@@ -282,7 +282,7 @@
 					
 					<li class="submenu">
 	
-						<a href="#"><i class="icon icon-check"></i> <span>PDF</span></a>
+						<a href="#"><i class="icon icon-check"></i> <span>Tabelas</span></a>
 					
 						<ul class="consultor">
 							<li><a href="<c:url value="/script/10"/>">Tabelas de Desconto</a></li>
@@ -346,7 +346,7 @@
 
 					<li class="submenu">
 	
-						<a href="#"><i class="icon icon-check"></i> <span>PDF</span></a>
+						<a href="#"><i class="icon icon-check"></i> <span>Tabelas</span></a>
 					
 						<ul class="consultor">
 							<li><a href="<c:url value="/script/10"/>">Tabelas de Desconto</a></li>
