--- a/sgo/web/WEB-INF/_repositorio/sgo/report_aprovados.jrxml
+++ b/sgo/web/WEB-INF/_repositorio/sgo/report_aprovados.jrxml
@@ -6,6 +6,7 @@
 	<parameter name="nomeMes" class="java.lang.String">
 		<parameterDescription><![CDATA[mês atual]]></parameterDescription>
 	</parameter>
+	<parameter name="nomeReport" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT
 	 SUPER.apelido as supervisor,
@@ -44,13 +45,6 @@
 			<frame>
 				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#333333"/>
 				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF"/>
-					<textElement>
-						<font size="34" isBold="true"/>
-					</textElement>
-					<text><![CDATA[   Aprovados]]></text>
-				</staticText>
-				<staticText>
 					<reportElement x="277" y="43" width="203" height="20" forecolor="#FFFFFF"/>
 					<textElement textAlignment="Right">
 						<font size="14" isBold="false"/>
@@ -63,6 +57,13 @@
 						<font size="14"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{nomeMes}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement x="34" y="20" width="231" height="43" forecolor="#FFFFFF"/>
+					<textElement>
+						<font size="30"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$P{nomeReport}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
